--- a/DataGridBlazor/DataGridBlazor.csproj
+++ b/DataGridBlazor/DataGridBlazor.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ServiceStack.Client" Version="5.13.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherModel\WeatherModel.csproj" />
+  </ItemGroup>
+
 </Project>
